--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <link rel="stylesheet" href="style.css" /> 
     <title>My Website</title>
+
   </head>
   <body>
+    <script src="script.js"></script>
     <h1>Hello World!</h1>
   </body>
 </html>
